[gd_scene load_steps=10 format=1]

[ext_resource path="res://areas/playground/playground.gd" type="Script" id=1]
[ext_resource path="res://areas/level_0/starsLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/planet/planet_one.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/hand/hand.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/planet/planet_two.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/planet/planet_three.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/planet/planet_four.tscn" type="PackedScene" id=7]
[ext_resource path="res://actors/planet/planet_five.tscn" type="PackedScene" id=8]
[ext_resource path="res://screens/GUI/GUI_new.tscn" type="PackedScene" id=9]

[node name="playground" type="Node"]

script/script = ExtResource( 1 )

[node name="starsLayer" parent="." instance=ExtResource( 2 )]

[node name="planet" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 334.822, 539.422 )
z/z = -2
needed_tics = 4
min_wait_time = 1.0
energy_consumption = 15
score_potential = 5

[node name="hand_left" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 208.944, 637.606 )
transform/scale = Vector2( 0.314693, 0.314693 )
z/z = 3

[node name="hand_right" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 1042.25, 637.606 )
transform/scale = Vector2( -0.314693, 0.314693 )
z/z = 3

[node name="planet 2" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 921.718, 290.313 )
z/z = -2

[node name="planet 3" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 135.07, 248.47 )
z/z = -2

[node name="planet 4" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 1186.72, 418.631 )
z/z = -2

[node name="planet 5" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 500.499, 315.418 )
z/z = -2

[node name="GUI_new" parent="." instance=ExtResource( 9 )]

margin/left = 10.822
margin/top = 14.422
margin/right = 50.822
margin/bottom = 54.422


